--- a/nixup/README
+++ b/nixup/README
@@ -1,3 +1,3 @@
 *** NixUP ***
 
-NixUP (Nix User Profiles) is a set of tools to help manage a user's onfiguration and services through Nix.
+NixUP (Nix User Profiles) is a set of tools to help manage a user's configuration and services through Nix.
